not more horizontal scroll issue(i hope)

--- a/static/css/photogallery.css
+++ b/static/css/photogallery.css
@@ -13,8 +13,7 @@
         font-size: 15px;
     }
     .galleryscroll{
-        overflow: auto;
-        
+        max-width: 370;
         overflow-y: hidden;
         display: inline-block;
         width: 375px;
@@ -24,12 +23,14 @@
         width: 200px;
         height: 100%;
     }
+
 }
+
 .galleryscroll{
     overflow-x: hidden;
     overflow-y: hidden;
     display: inline-block;
-    width: 1200px;
+    width: 100%;
     height: 130px;
 }
 .galleryscroll:hover{
